@@ -1,6 +1,4 @@
 <ul style="list-style-type:none;">
-  <h1>Conditions</h1>
-
   {% for condition_hash in site.data.conditions %}
   {% capture condition_name %}{{ condition_hash[0] }}{% endcapture %}
   <li style="padding: 5px 0">
