@@ -1,5 +1,6 @@
 26.09.2023
 - Added a great many magic items from various old documents.
+- Fixed up conditions styling
 
 23.09.2023
 - Fixed missing ability score
